@@ -2,6 +2,12 @@ dclone package versions
 
 Version 0.2-2, July 29, 2009
 
+    * print.mcmc.list: removes attribues before
+      printing.
+    * shapiro.diag: posterior distribution is 
+      now standardized before testing.
+    * plot.cdtable: plotting method based on errlines.
+    * errlines: draws error bars to existing plot.
     * dctable generic and default method added to
       retrieve dctable attribute from an iteratively
       fitted MCMC object.
